--- a/.mngit.yml
+++ b/.mngit.yml
@@ -1,5 +1,5 @@
 about:
-  brief: '**StatisKit** is a meta-repository providing general documentation and tools
+  brief: 'meta-repository providing general documentation and tools
     for the **StatisKit** Organization'
   name: StatisKit
   version: v0.1.0
