--- a/.mngit.yml
+++ b/.mngit.yml
@@ -2,6 +2,9 @@ about:
   brief: 'meta-repository providing general documentation and tools
     for the **StatisKit** Organization'
   name: StatisKit
+  authors:
+      - Pierre Fernique
+  email: pfernique@gmail.com
   version: v0.1.0
 authors:
   basename: AUTHORS.rst
