--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,14 @@
 
+language: python
+
+python: "2.7"
+
+install:
+    - "python setup.py install"
+    - "pip install coveralls"
+
+script:
+    - "nosetests -v --with-coverage --cover-package=mngit"
+
+after_success:
+    coveralls
