--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: python
 python: "2.7"
 
 install:
+    - "pip install -r REQUIREMENTS.txt"
     - "python setup.py install"
     - "pip install coveralls"
 
