--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
     - "pip install coveralls"
 
 script:
-    - "nosetests -v --with-coverage --cover-package=mngit"
+    - "nosetests -v --with-coverage --cover-package=statiskit"
 
 after_success:
     coveralls
