--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,10 @@ install:
     - "pip install -r REQUIREMENTS.txt"
     - "python setup.py install"
     - "pip install coveralls"
+
+script:
+    - "mngit update"
+    - "nosetests -v --with-coverage --cover-package=statiskit"
+
+after_success:
+    coveralls
