--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,20 @@ language: python
 
 python: "2.7"
 
+before_install:
+    - "cd .."
+    - "git clone https://github.com/StatisKit/PluginTools.git"
+    - "cd PluginTools"
+    - "python setup.py install"
+    - "cd .."
+    - "git clone https://github.com/StatisKit/MngIt.git"
+    - "cd MngIt"
+    - "pip install -r REQUIREMENTS.txt"
+    - "python setup.py install"
+    - "cd .."
+    - "cd StatisKit"
+    
+
 install:
     - "pip install -r REQUIREMENTS.txt"
     - "python setup.py install"
