--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
     - "pip install coveralls"
 
 script:
-    - "nosetests -v --with-coverage --cover-package=statiskit"
+    - "yes 'y' | nosetests -v --with-coverage --cover-package=statiskit"
 
 after_success:
     coveralls
