--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
     - "pip install coveralls"
 
 script:
-    - "nosetests -v --with-coverage --cover-package=pkgtk"
+    - "nosetests -v --with-coverage"
 
 after_success:
     coveralls
