--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python: "2.7"
 
 install:
-    - "python setup.py install"
+    - "python setup.py develop"
     - "pip install coveralls"
 
 script:
