--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,33 @@
+sudo: required
+dist: trusty
 language: python
+
+os: linux
 
 python: "2.7"
 
-install:
-    - "python setup.py develop --user"
-    - "pip install coveralls"
+before_install:
+    - if [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
+        wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+      elif [[ "$TRAVIS_OS_NAME" = "osx" ]]; then
+        curl https://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh -o miniconda.sh;
+      fi
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH=$HOME/miniconda/bin:$PATH
+    - conda config --set always_yes yes --set changeps1 no
+    - conda update -q conda
+    - conda info -a
+    - conda install conda-build
+    - pip install python-coveralls
+
+before_script:
+    - conda build conda/python-pkgtk
+    - conda install python-pkgtk --use-local
+    - conda remove python-pkgtk
 
 script:
-    - "nosetests -v --with-coverage"
+    - python setup.py develop --user
+    - nosetests -v --with-coverage
 
 after_success:
     coveralls
