--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,6 @@ after_success:
           anaconda upload --user statiskit ${CONDA_FILE%%} --force;
         done;
         docker build --build-arg BUILD="false" -t statiskit/ubuntu:trusty . ;
-        docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+        docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
         docker push statiskit/ubuntu:trusty;
       fi
