--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ install:
     - pip install nose
 
 script:
-    - conda build conda/python-pkgtk --no-test -c conda-forge
-    - conda install python-pkgtk --use-local -c conda-forge
+    - conda build conda/python-pkgtk --no-test -c statiskit -c conda-forge
+    - conda install python-pkgtk --use-local -c statiskit -c conda-forge
     - pkgtk authors
     - conda remove python-pkgtk
     - conda env remove -n _build
