--- a/.coveragerc
+++ b/.coveragerc
@@ -2,6 +2,5 @@
 exclude_lines =
     pragma: no cover
     def __repr__
-    raise AssertionError
-    raise NotImplementedError
+    raise *Error
     if __name__ == .__main__.:
