--- a/.travis.yml
+++ b/.travis.yml
@@ -36,10 +36,12 @@ script:
 after_success:
     - coveralls --rcfile=.coveragerc
     - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]]; then
-        conda install anaconda-client;
-        anaconda login --username "$ANACONDA_USERNAME" --password "$ANACONDA_PASSWORD";
-        CONDA_FILE=`conda build conda/python-pkgtk --output`; 
-        anaconda upload --user statiskit "$CONDA_FILE" --force;
-        curl --request POST http://readthedocs.org/build/pkgtk;
+        if [[ ! -z $ANACONDA_USERNAME ]] && [[ ! -z $ANACONDA_PASSWORD ]]; then
+            conda install anaconda-client;
+            anaconda login --username "$ANACONDA_USERNAME" --password "$ANACONDA_PASSWORD";
+            CONDA_FILE=`conda build conda/python-pkgtk --output`; 
+            anaconda upload --user statiskit "$CONDA_FILE" --force;
+            curl --request POST http://readthedocs.org/build/pkgtk;
+        fi
       fi      
 
