--- a/.pkgtk.yml
+++ b/.pkgtk.yml
@@ -1,14 +1,16 @@
 about:
-  brief: 'Toolkit for packaging'
-  homepage: ''
-  name: 'PkgTk'
+  brief: Toolkit for packaging
+  homepage: pkgtk.readthedocs.io
+  name: PkgTk
   plugin: github
 authors:
   basename: CONTRIBUTORS.rst
   format: '* {name} <{email}> ({score})'
   plugin: commit
 license:
-  plugin: CeCILL-C
+  basename: LICENSE.rst
   exclude:
-    - "./.git/*"
-    - "./build/*"
+  - ./.git/*
+  - ./build/*
+  plugin: CeCILL-C
+  width: 78
