--- a/conda/python-pkgtk/meta.yaml
+++ b/conda/python-pkgtk/meta.yaml
@@ -8,7 +8,8 @@ source:
 build:
   number: 0
   script: python setup.py install
-
+  preserve_egg_dir: True
+  
 about:
   home: http://pkgtk.readthedocs.org
   license: CeCILL-C
