--- a/.pkgtk.yml
+++ b/.pkgtk.yml
@@ -1,12 +1,28 @@
+##################################################################################
+#                                                                                #
+# PkgTk: Tool kit for Python packages                                            #
+#                                                                                #
+# Homepage: pkgtk.readthedocs.io                                                 #
+#                                                                                #
+# Copyright (c) 2016 Pierre Fernique                                             #
+#                                                                                #
+# This software is distributed under the CeCILL-C license. You should have       #
+# received a copy of the legalcode along with this work. If not, see             #
+# <http://www.cecill.info/licences/Licence_CeCILL-C_V1-en.html>.                 #
+#                                                                                #
+# File authors: Pierre Fernique <pfernique@gmail.com> (14)                       #
+#                                                                                #
+##################################################################################
+
 about:
   authors:
   - !!python/unicode 'Pierre Fernique'
   brief: !!python/unicode 'Tool kit for Python packages'
   email: !!python/unicode 'statiskit@googlegroups.com'
+  homepage: pkgtk.readthedocs.io
   name: !!python/unicode 'PkgTk'
   plugin: github
-  homepage: 'pkgtk.readthedocs.io'
-  version: 'v0.1.0'
+  version: v0.1.0
 authors:
   basename: CONTRIBUTORS.rst
   format: '* `{name} <{email}>`_ ({score})'
