--- a/.pkgtk.yml
+++ b/.pkgtk.yml
@@ -1,19 +1,3 @@
-##################################################################################
-#                                                                                #
-# PkgTk: Tool kit for Python packages                                            #
-#                                                                                #
-# Homepage: pkgtk.readthedocs.io                                                 #
-#                                                                                #
-# Copyright (c) 2016 Pierre Fernique                                             #
-#                                                                                #
-# This software is distributed under the CeCILL-C license. You should have       #
-# received a copy of the legalcode along with this work. If not, see             #
-# <http://www.cecill.info/licences/Licence_CeCILL-C_V1-en.html>.                 #
-#                                                                                #
-# File authors: Pierre Fernique <pfernique@gmail.com> (14)                       #
-#                                                                                #
-##################################################################################
-
 about:
   authors:
   - !!python/unicode 'Pierre Fernique'
@@ -32,5 +16,8 @@ license:
   exclude:
   - ./.git/*
   - ./build/*
+  - ./.pkgtk.yml
+  - ./CONTRIBUTORS.rst
+  - ./LICENSE.rst
   plugin: CeCILL-C
   width: 78
