--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
-sudo: required
-dist: trusty
-language: cpp
-
-services:
-  - docker
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+      services:
+        - docker
+    - os: osx
+      osx_image: xcode7.2
 
 before_install:
     - if [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
@@ -20,9 +23,11 @@ before_install:
 
 install:
     - pip install python-coveralls
+    - conda build toolchain
+    - conda install toolchain --use-local
 
 script:
-    - conda build libboost -c statiskit
+    - conda build libboost-python -c statiskit
     - conda build python-scons -c statiskit
     - conda build python-parse -c statiskit
 
@@ -31,11 +36,13 @@ after_success:
     - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]]; then
         conda install anaconda-client;
         anaconda login --username "$ANACONDA_USERNAME" --password "$ANACONDA_PASSWORD";
-        for CONDA_RECIPE in libboost python-scons python-parse; do
+        for CONDA_RECIPE in toolchain libboost-python python-scons python-parse; do
           CONDA_FILE=`conda build $CONDA_RECIPE --output`; 
           anaconda upload --user statiskit ${CONDA_FILE%%} --force;
         done;
-        docker build --build-arg BUILD="false" -t statiskit/ubuntu . ;
-        docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-        docker push statiskit/ubuntu;
+        if [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
+            docker build --build-arg BUILD="false" -t statiskit/ubuntu . ;
+            docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+            docker push statiskit/ubuntu;
+        fi
       fi
