--- a/libboost-python/meta.yaml
+++ b/libboost-python/meta.yaml
@@ -1,6 +1,7 @@
+
 # Adpated from https://github.com/conda/conda-recipes/tree/master/boost
 package:
-  name: libboost
+  name: libboost-python
   version: 1.61.0
 
 source:
@@ -9,10 +10,12 @@ source:
 
 build:
   number: 0
+  script_env:
+    - TOOLCHAIN
   features:
-    - vc9               [win and py27]
-    - vc10              [win and py34]
-    - vc14              [win and py35]
+    - {{ TOOLCHAIN }}
+  track_features:
+    - {{ TOOLCHAIN }}
 
 about:
   home: http://www.boost.org/
@@ -20,14 +23,7 @@ about:
 
 requirements:
   build:
+    - toolchain
     - python
-    - icu               [unix]
-    - bzip2             [unix]
-    - zlib
-
   run:
-    # python dependency is here due to libboost-python library that depends on
-    # python version
     - python
-    - icu               [unix]
-    - zlib
