--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,4 +11,7 @@ install:
   - conda update -q conda
   - conda info -a
   - conda install conda-build
+  - conda install mingw
+  - g++ --version
+  - g++ -dumpversion
 #  - for /D %%i in (*) do conda build "%%i"
