--- a/.travis.yml
+++ b/.travis.yml
@@ -36,18 +36,16 @@ script:
 
 after_success:
     - coveralls
-    - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]]; then
-        if [[ ! -z $ANACONDA_USERNAME ]] && [[ ! $ANACONDA_PASSWORD ]]; then
-          conda install anaconda-client;
-          anaconda login --username "$ANACONDA_USERNAME" --password "$ANACONDA_PASSWORD";
-          for CONDA_RECIPE in toolchain libboost-python python-scons python-parse; do
-            CONDA_FILE=`conda build $CONDA_RECIPE --output`; 
-            anaconda upload --user statiskit ${CONDA_FILE%%} --force;
-          done;
-        fi
-        if [[ ! -z $DOCKER_USERNAME ]] && [[ ! -z $DOCKER_PASSWORD]] && [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
-          docker build --build-arg BUILD="false" -t statiskit/ubuntu . ;
-          docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-          docker push statiskit/ubuntu;
-        fi
+    - if if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]] && [[ ! -z $ANACONDA_PASSWORD ]]; then
+        conda install anaconda-client;
+        anaconda login --username "$ANACONDA_USERNAME" --password "$ANACONDA_PASSWORD";
+        for CONDA_RECIPE in toolchain libboost-python python-scons python-parse; do
+          CONDA_FILE=`conda build $CONDA_RECIPE --output`; 
+          anaconda upload --user statiskit ${CONDA_FILE%%} --force;
+        done;
+      fi
+    - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]] && [[ ! -z $DOCKER_PASSWORD ]]; then
+        docker build --build-arg BUILD="false" -t statiskit/ubuntu . ;
+        docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+        docker push statiskit/ubuntu;
       fi
