--- a/.travis.yml
+++ b/.travis.yml
@@ -18,32 +18,32 @@ matrix:
       osx_image: xcode7.2
 
 before_install:
-    - if [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
+    - if [[ "$TRAVIS_DOCKER" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
         wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
-      elif [[ "$TRAVIS_OS_NAME" = "osx" ]]; then
+      elif [[ "$TRAVIS_DOCKER" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "osx" ]]; then
         curl https://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh -o miniconda.sh;
       fi
-    - bash miniconda.sh -b -p $HOME/miniconda
-    - export PATH=$HOME/miniconda/bin:$PATH
-    - conda config --set always_yes yes --set changeps1 no
-    - conda update -q conda
-    - conda info -a
-    - conda install conda-build
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || bash miniconda.sh -b -p $HOME/miniconda
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || export PATH=$HOME/miniconda/bin:$PATH
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || conda config --set always_yes yes --set changeps1 no
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || conda update -q conda
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || conda info -a
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || conda install conda-build
 
 install:
-    - pip install python-coveralls
-    - conda build toolchain
-    - conda create -n _travis toolchain --use-local
-    - source activate _travis
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || pip install python-coveralls
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || conda build toolchain
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || conda create -n _travis toolchain --use-local
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || source activate _travis
 
 script:
-    - conda build libboost-python -c statiskit
-    - conda build python-scons -c statiskit
-    - conda build python-parse -c statiskit
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || conda build libboost-python -c statiskit
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || conda build python-scons -c statiskit
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || conda build python-parse -c statiskit
 
 after_success:
-    - coveralls
-    - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]] && [[ ! -z $ANACONDA_PASSWORD ]]; then
+    - [[ "$TRAVIS_DOCKER" = "true" ]] || coveralls
+    - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_DOCKER" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]] && [[ ! -z $ANACONDA_PASSWORD ]]; then
         conda install anaconda-client;
         anaconda login --username "$ANACONDA_USERNAME" --password "$ANACONDA_PASSWORD";
         for CONDA_RECIPE in toolchain libboost-python python-scons python-parse; do
