--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ matrix:
         - TRAVIS_DOCKER="true"
     - os: osx
       osx_image: xcode7.2
-
+      env:
+        - TRAVIS_DOCKER="false"
+        
 before_install:
     - if [[ "$TRAVIS_DOCKER" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
         wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
