--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ after_success:
         done;
       fi
     - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ "$TRAVIS_DOCKER" = "true" ]] && [[ ! -z $DOCKER_USERNAME ]] && [[ ! -z $DOCKER_PASSWORD ]]; then
-        docker build --quiet --build-arg BUILD="false" -t statiskit/ubuntu . ;
+        docker build --build-arg BUILD="false" -t statiskit/ubuntu . ;
         docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
         docker push statiskit/ubuntu;
       fi
