--- a/libboost-python/meta.yaml
+++ b/libboost-python/meta.yaml
@@ -5,10 +5,9 @@ package:
   version: 1.61.0
 
 source:
-  fn: boost_1_61_0.tar.bz2 # [not win]
-  url: http://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2 # [not win]
-  fn: boost_1_61_0.zip # [win]
-  url: https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.zip # [win]
+  fn:  boost_1_61_0.tar.bz2
+  url: http://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2
+  md5: 6095876341956f65f9d35939ccea1a9f
 
 build:
   number: 0
