--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,9 +11,6 @@ install:
   - conda update -q conda
   - conda info -a
   - conda install conda-build
-  - conda build toolchain -c statiskit
-  - conda create -n _appveyor toolchain --use-local
-  - activate _appveyor
-  - conda build libboost-python -c statiskit
-  - conda build python-scons -c statiskit
-  - conda build python-parse -c statiskit
+  
+build_script:
+  - CALL appveyor-build.bat
