--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ after_success:
         coveralls;
       fi
     - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_DOCKER" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]] && [[ ! -z $ANACONDA_PASSWORD ]]; then
-        conda install anaconda-client;
+        conda install -n root anaconda-client;
         anaconda login --username "$ANACONDA_USERNAME" --password "$ANACONDA_PASSWORD";
         for CONDA_RECIPE in toolchain libboost-python python-scons python-parse; do
           CONDA_FILE=`conda build $CONDA_RECIPE --output`; 
