Add Boost-Build recipe for windows

--- a/boost-build/meta.yaml
+++ b/boost-build/meta.yaml
@@ -1,7 +1,7 @@
 
 # Adpated from https://github.com/conda/conda-recipes/tree/master/boost
 package:
-  name: libboost-python
+  name: boost-build
   version: 1.61.0
 
 source:
@@ -11,12 +11,6 @@ source:
 
 build:
   number: 0
-  script_env:
-    - TOOLCHAIN # [not win]
-  features:
-    - {{ TOOLCHAIN }} # [not win]
-  track_features:
-    - {{ TOOLCHAIN }} # [not win]
 
 about:
   home: http://www.boost.org/
@@ -25,7 +19,3 @@ about:
 requirements:
   build:
     - toolchain
-    - python
-    - boost-build # [win]
-  run:
-    - python
